vs fhir improvement